--- a/css/styles.css
+++ b/css/styles.css
@@ -40,17 +40,17 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   background-color: #f3f3f3;
   min-height: 100%;
 	width: 100%;
-
+	position: relative;
 }
 #footer {
   background-color: #444;
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
-  padding: 25px;
+  padding: 25px 0 25px;
   text-align: center;
   text-transform: uppercase;
-	width: 100% !important;
+
 }
 /* ====================== Navigation ====================== */
 nav {
@@ -139,6 +139,10 @@ nav h1 a {
   width: 200px;
 }
 
+#neighborhoods-select:focus, #cuisines-select:focus{
+	border: 2px solid #444;
+}
+
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   background-color: #f3f3f3;
@@ -148,14 +152,17 @@ nav h1 a {
   text-align: center;
 }
 #restaurants-list li {
+
   background-color: #fff;
   font-family: Arial,sans-serif;
-  margin: 15px auto;
-  min-height: 380px;
+  margin: 15px 20px;
+  max-height:100%;
   padding: 10px 30px 25px;
   text-align: center;
-  width: fit-content;
+  max-width: 250px;
   box-shadow: 1px 2px 5px 2px #999;
+  display: inline-block;
+
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -166,18 +173,28 @@ nav h1 a {
   min-width: 100%;
 }
 #restaurants-list li h1 {
+
   color: #f18200;
   font-family: Arial,sans-serif;
-  font-size: 14pt;
+  font-size: 13pt;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
-  margin: 20px 0 10px;
+  margin: 20px 0 0px;
   text-transform: uppercase;
 }
+
 #restaurants-list p {
   margin: 0;
-  font-size: 11pt;
+  font-size: 1em;
+}
+
+#restaurants-list p:first-of-type{
+	margin: 1em 0 0 ;
+}
+
+#restaurants-list p:last-of-type{
+	margin: 0 0 1em;
 }
 #restaurants-list li a {
   background-color: orange;
@@ -192,6 +209,10 @@ nav h1 a {
   text-transform: uppercase;
 }
 
+#restaurants-list li a:focus, #restaurants-list li a:hover{
+	background-color: #447800;
+}
+
 /* ====================== Restaurant Details ====================== */
 .inside header {
   position: fixed;
@@ -201,7 +222,7 @@ nav h1 a {
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
+  height: 100%;
   position: fixed;
   right: 0;
   top: 80px;
@@ -216,7 +237,8 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 100%;
+  opacity: 0.5;
 }
 #restaurant-name {
   color: #f18200;
@@ -252,90 +274,83 @@ nav h1 a {
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
   width: 45%;
-
 }
+
 #reviews-container {
-  padding: 30px 40px 80px;
-
+ padding: 30px 40px 80px;
 }
-
 
 #reviews-container h2 {
-  color: #f58500;
-  font-size: 24pt;
-  font-weight: 300;
-  letter-spacing: -1px;
-  padding-bottom: 1pt;
-width: fit-content !important;
+	color: #f58500;
+	font-size: 24pt;
+	font-weight: 300;
+	letter-spacing: -1px;
+	padding-bottom: 1pt;
+	width: fit-content !important;
 }
+
 #reviews-list {
-  margin: 0;
-  padding: 0;
-
-
+	margin: 0;
+	padding: 0;
 }
-#reviews-list li {
-  background-color: #fff;
-    border: 2px solid #f3f3f3;
-  display: block;
-  list-style-type: none;
-  margin: 0 0 30px;
-  overflow: hidden;
-  padding: 0 20px 20px;
-  position: relative;
 
-  max-width: 70%;
+#reviews-list li {
+	background-color: #fff;
+	border: 2px solid #f3f3f3;
+	display: block;
+	list-style-type: none;
+	margin: 0 0 30px;
+	//overflow: hidden;
+	padding: 0 20px 20px;
+	position: relative;
+	max-width: 70%;
 }
 #reviews-list li p {
-  margin: 0 0 10px;
+	margin: 0 0 10px;
 }
 #restaurant-hours td {
-  color: #666;
+	color: #666;
 }
 
 @media screen and (max-width:500px){
-	#maincontent{
-		background: red;
-		width: 100%;
-	}
-
-	html{
-		min-width: 100% !important;
-
-	}
-
-	.inside{
-		min-width: 100% !important;
-	}
-
 	#map-container{
-
-
 		width: 100% !important;
 		height: 40% !important;
 		z-index: 11111;
 	}
 
-
-
-	#restaurant-container{
-		
-		padding-top: 120% !important;
-		width: 100% !important;
+	#breadcrumb{
+		width: fit-content;
 	}
 
+	#restaurant-container{
+		width: 100%;
+		padding: 55vh 0 0 !important;
+	}
+
+	#restaurant-container >img{
+		margin: 0 auto;
+		display: block;
+	}
+
+	#restaurant-container> *:not(img){
+		width: fit-content;
+		display: block;
+		margin: 0 auto;
+	}
 
 	#reviews-container {
 		position: relative;
-	  padding: 30px 40px 80px;
-	  width: 100%;
+		width: 100%;
+		padding: 0 !important;
+	}
+
+	#reviews-list > li,h2{
+		margin: 0 auto 15px;
 	}
 
 	#footer{
 		position: relative !important;
-		bottom:0 !important;
-		left:0;
-		width: 100%;
+		width: inherit !important;
 	}
-
 }
